Split dependencies. Refactored scripts for docker. Made couchpotatoprereelease to run on default port

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "clean": "rm -rf node_modules/ npm-debug.log && npm run docker:reset",
     "docker": "npm run docker:build && npm run docker:stop && npm run docker:start",
     "docker:build": "node ./build/docker/build",
-    "docker:reset": "npm run docker:stop && docker-compose rm -f",
-    "docker:start": "docker-compose up -d",
-    "docker:stop": "docker-compose stop",
+    "docker:remove": "docker-compose rm -f",
+    "docker:reset": "npm run docker:stop && npm run docker:remove",
+    "docker:start": "docker-compose up -d || true",
+    "docker:stop": "docker-compose stop || true",
     "hosts": "sudo hostile set $(docker-machine ip default) ultimate.media.server",
     "open": "npm run hosts && node open",
+    "postinstall": "npm run docker:build",
     "test": "echo 'No tests specified' && exit 0"
   },
   "keywords": [
@@ -23,11 +25,13 @@
   ],
   "author": "Nate Clark",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^1.1.1",
-    "hostile": "^1.0.2",
     "json2yaml": "^1.0.3",
-    "open": "0.0.5",
     "shelljs": "^0.5.3"
+  },
+  "devDependencies": {
+    "hostile": "^1.0.2",
+    "open": "0.0.5"
   }
 }
