--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A docker collection of services needed to make the best automated media server in existence with the least amount of effort.",
   "main": "app.js",
   "scripts": {
-    "clean": "rm -rf node_modules/ npm-debug.log && npm run docker:reset",
+    "clean": "rm -rf node_modules/ npm-debug.log && npm run docker:reset && rm -rf docker-compose.yml configs/",
     "docker": "npm run docker:build && npm run docker:stop && npm run docker:start",
     "docker:build": "node ./build/docker/build",
     "docker:remove": "docker-compose rm -f",
-    "docker:reset": "npm run docker:stop && npm run docker:remove",
+    "docker:reset": "[ -f docker-compose.yml ] && npm run docker:stop && npm run docker:remove || echo \"No docker-compose.yml found\"",
     "docker:start": "docker-compose up -d || true",
     "docker:stop": "docker-compose stop || true",
     "hosts": "sudo hostile set $(docker-machine ip default) ultimate.media.server",
