--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A docker collection of services needed to make the best automated media server in existence with the least amount of effort.",
   "main": "app.js",
   "scripts": {
-    "clean": "rm -rf node_modules/ && npm run clean:dusting",
-    "clean:dusting": "npm run docker:reset && rm -rf configs/ temp/plex/ temp/incomplete/sabnzbd temp/incomplete/transmission docker-compose.yml npm-debug.log",
+    "clean": "rm -rf node_modules/ && npm run clean:dusting && rm -rf configs/",
+    "clean:dusting": "npm run docker:reset && rm -rf temp/plex/ temp/incomplete/ docker-compose.yml npm-debug.log",
     "docker": "npm run docker:build && npm run docker:stop && npm run docker:start",
     "docker:build": "node ./build/docker/build",
     "docker:remove": "docker-compose rm -f",
