--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.1",
+    "cwd": "^0.9.1",
     "json2yaml": "^1.0.3",
     "shelljs": "^0.5.3"
   },
